third_party/crashpad/crashpad/snapshot/mac/process_types/traits.h
@@ -37,6 +37,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
     using Pointer = uint##lp_bits##_t __VA_ARGS__;                   \
     using IntPtr = int##lp_bits##_t __VA_ARGS__;                     \
     using UIntPtr = uint##lp_bits##_t __VA_ARGS__;                   \
+    using Reserved32_32Only = Reserved32_32Only##lp_bits;            \
     using Reserved32_64Only = Reserved32_64Only##lp_bits;            \
     using Reserved64_64Only = Reserved64_64Only##lp_bits;            \
     using Nothing = Nothing;                                         \
